@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US004

class Property {
    area
    DCC
}

class Photograph{
    url
}

class Lease extends Price{
    contractDuration
}

class Price {
    price
}

class Residence extends Property{
    numberBedrooms
    numberBathrooms
    parkingSpace
    availableEquipment
    centralHeating
    airConditioning
}

class Location{
    street
    city
    *district*
    state
    zipCode
}

class TypeResidence extends Residence{
    designation
}

class TypeProperty{
    designation
}

class House extends Residence{
    basement
    inhabitableLoft
    sunExposure
}

class AvailableEquipment{
    description
}

class Agent {
    name
    citizenCardNumber
    taxesNumber
    address
    telephoneNumber
    emailAddress
    password
    agency
}

class Agency {
    designation
    emailAddress
    localManager
    contactNumber
}

class Owner {
    name
    citizenCardNumber
    taxNumber
    address
    emailAddress
    telephoneNumber
}

Agency "1" -- "1" Location : contains >
TypeProperty "1" -- "*" Property : classifies >
Price "1" -left- "1" Property : appraises >
Property "1" -up- "1" Owner : belongs to >
Agent "1" -down- "0..*" Property : < advertised by
Agency "1" -right- "1..*" Agent : employees >
Photograph "1..*" -up- "1" Property : depicts >
Location "1" -right- "1" Property : represents >
Property "1" -- "*" AvailableEquipment : contains >

@enduml